--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -228,16 +228,16 @@
                                                             <select class="UnitWeight text-size80"></select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
+                                                            <input type="text" id="txtQty" value ="0" class="Quantity text-size80 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td class="hidecolumn">
                                                             <input type="text" id="txtPriceList" class="PriceList text-size80 textright" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice" class="UnitPrice text-size130 textright" onchange="CalSum()" />
+                                                            <input type="text" id="txtUnitPrice" value="0" class="UnitPrice text-size130 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
+                                                            <input type="text" id="txtAmount" value="0" disabled class="Amount Number text-size165 txtdisablerow">
                                                         </td>
 
                                                         <td>
@@ -271,16 +271,16 @@
                                                             <select class="UnitWeight text-size80"></select>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
+                                                            <input type="text" id="txtQty" value="0" class="Quantity text-size80 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td class="hidecolumn">
                                                             <input type="text" id="txtPriceList" class="PriceList text-size80 textright" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice" class="UnitPrice text-size130 textright" onchange="CalSum()" />
+                                                            <input type="text" id="txtUnitPrice" value="0" class="UnitPrice text-size130 textright" onchange="CalSum()" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
+                                                            <input type="text" id="txtAmount" value="0" disabled class="Amount Number text-size165 txtdisablerow">
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img id="cloneRowIncome" class="cloneRowIncome row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -355,16 +355,16 @@
                                                             <select class="unitSelect"></select>
                                                         </td>
                                                         <td> 
-                                                            <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
+                                                            <input type="text" id="txtQty" value="0" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                         </td>
                                                         <td class="hidecolumn">
                                                             <input type="text" id="txtPriceList1" class="PriceList1 text-size80 textright" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice" name="UnitPrice" class="UnitPrice1 text-size130" onchange="CalSumExpense()">
+                                                            <input type="text" id="txtUnitPrice1" value="0" name="UnitPrice1" class="UnitPrice1 text-size130" onchange="CalSumExpense()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
+                                                            <input type="text" id="txtAmount" value="0" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="cloneRowExpense row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -402,10 +402,10 @@
                                                             <input type="text" id="txtPriceList1" class="PriceList1 text-size80 textright" />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtUnitPrice1" name="UnitPrice1" class="UnitPrice1 text-size130" onchange="CalSumExpense()">
+                                                            <input type="text" id="txtUnitPrice1" value="0" name="UnitPrice1" class="UnitPrice1 text-size130" onchange="CalSumExpense()">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
+                                                            <input type="text" id="txtAmount" value="0" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="cloneRowExpense row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
